# whisper-web

./: .buildinfo  .dockerignore  .env.example  .envrc  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  examples.html  fix_ffmpeg.sh  genindex.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.sh  whisper_web.html
_modules/: index.html
_modules/whisper_web/: inputstream_generator.html  server.html  types.html  whisper_model.html
_sources/: examples.rst.txt  index.rst.txt  intro.rst.txt  modules.rst.txt  whisper_web.rst.txt
app/: cli.py  gradio_client.py  helper.py  server.py  streamlit_diarization.py  streamlit_upload_client.py  streamlit_viewer_client.py
docker/: DOCKERFILE.server.cpu  DOCKERFILE.server.cuda  DOCKERFILE.streamlit_upload  DOCKERFILE.streamlit_viewer
docs/: Makefile
docs/diagrams/: whisper_web_flow.gv
docs/source/: conf.py  examples.rst  index.rst  intro.rst
tests/: test_api_pytest.py  test_multi_client_pytest.py
whisper_web/: __main__.py  events.py  inputstream_generator.py  management.py  server.py  types.py  utils.py  whisper_model.py
whisper_web/diarization/: diarization.py  utils.py
whisper_web/diarization/lib/: __init__.py  diar_infer_telephonic.yaml  msdd.py
whisper_web/lib/audio_pipeline/: inputstream_generator.py
whisper_web/lib/backbone/: events.py  management.py  server.py
whisper_web/lib/diarization/: engine.py  msdd.py  utils.py
whisper_web/lib/transcription/: whisper_model.py
