[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-web"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # Core shared dependencies for all components
  "soundfile>=0.13.1",
  "pydantic>=2.11.3",
]

[dependency-groups]
# Development dependencies
dev = [
  "autodoc-pydantic>=2.2.0",
  "code2flow>=2.5.1",
  "ghp-import>=2.1.0",
  "pylint>=3.3.7",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.11.5",
  "sphinx>=8.2.3",
  "sphinx-rtd-theme>=3.0.2",
]

# Server dependencies (FastAPI server with ML inference)
server = [
  "fastapi>=0.115.12",
  "uvicorn>=0.34.1",
  "transformers>=4.51.3",
  "accelerate>=0.33.0",
  "websockets>=15.0.1",
]

# Client dependencies (CLI and audio capture clients)
client = [
  "sounddevice>=0.5.0",
  "websockets>=15.0.1",
  "aiohttp>=3.12.6",
  "ffmpeg-python>=0.2.0",
  "resampy>=0.4.3",
]

# Streamlit app dependencies
streamlit = [
  "streamlit>=1.44.1",
  "requests>=2.31.0",
]

# HTTP client dependencies (for web requests)
http = [
  "httpx>=0.28.1",
  "requests>=2.31.0",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
  "torchaudio>=0.22.0",
]
cu128 = [
  "torch>=2.7.0",
  "torchaudio>=0.22.0",
  "numba>=0.61.2",
]
cu118 = [
  "torch>=2.7.0",
  "torchaudio>=0.22.0",
  "numba>=0.61.2",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
    { extra = "cu118" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu118", extra = "cu118" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu118", extra = "cu118" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.setuptools]
py-modules = []

[tool.pyrefly]
site_package_path = [".venv/lib/python3.12/site-packages"]
