[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-web"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # Core shared dependencies for all components
  "soundfile>=0.13.1",
  "pydantic>=2.11.3",
]

[dependency-groups]
# Development dependencies
dev = [
  "autodoc-pydantic>=2.2.0",
  "code2flow>=2.5.1",
  "ghp-import>=2.1.0",
  "pylint>=3.3.7",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.11.5",
  "sphinx>=8.2.3",
  "sphinx-rtd-theme>=3.0.2",
]

# Server dependencies (FastAPI server with ML inference)
server = [
  "fastapi>=0.115.12",
  "uvicorn>=0.34.1",
  "transformers>=4.34",
  "accelerate>=0.33.0",
  "websockets>=15.0.1",
  "deepmultilingualpunctuation>=1.0.1",
  "omegaconf>=2.3.0",
  "torchaudio>=2.8.0",
  "ctc-forced-aligner>=1.0.2",
  "nltk>=3.9.2",
  "yt-dlp>=2025.12.8",
  "pyannote-audio>=4.0.3",
  "unidecode>=1.4.0",
  "torchcodec>=0.7.0",
]

# Client dependencies (CLI and audio capture clients)
client = [
  "sounddevice>=0.5.0",
  "websockets>=15.0.1",
  "aiohttp>=3.12.6",
  "ffmpeg-python>=0.2.0",
  "resampy>=0.4.3",
  "pyarrow>=19.0.1",
]

# Streamlit app dependencies
streamlit = [
  "streamlit>=1.44.1",
  "requests>=2.31.0",
]

# HTTP client dependencies (for web requests)
http = [
  "httpx>=0.28.1",
  "requests>=2.31.0",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.8.0",
  "torchaudio>=2.8.0",
]
cu128 = [
  "torch>=2.8.0",
  "torchaudio>=2.8.0",
  "numba>=0.61.2",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.setuptools]
py-modules = []

[tool.pyrefly]
site_package_path = [".venv/lib/python3.12/site-packages"]
